--- a/1_hello_plantuml.ipynb
+++ b/1_hello_plantuml.ipynb
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -84,7 +84,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/usr/bin/dot\r\n"
+      "/opt/local/bin/dot\r\n"
      ]
     }
    ],
@@ -103,56 +103,88 @@
    "source": [
     "### 1.2.2 PlantUML 설치\n",
     "\n",
-    "* 윈도우, Linux Unbuntu 모두 단순히 plantuml.jar를 다운로드에서 경로 설정으로 끝남\n",
+    "* 윈도우, Linux Ubuntu 모두 단순히 plantuml.jar를 다운로드하면 된다. 별도로 설치할 필요가 없다.\n",
     "    * plantuml.jar 다운로드 (http://plantuml.com)\n",
-    "    * plantuml.jar 파일을 ipynb가 있는 디렉토리로 이동\n",
+    "    * plantuml.jar 파일을 ipynb가 있는 폴더 밑 lib폴더로 이동한다.\n",
     "    \n",
-    "* 실행하려면 경로가 설정되어 있어야 한다.\n",
-    "    * 설정확인\n",
+    "* 실행하려면 경로를 인식하도록 설정한다.\n",
+    "    * 설정이 되면, 다음을 실행할 수 있다.\n",
     "        ```\n",
-    "        $ java -jar plantuml.jar -testdot\n",
+    "        $ java -jar lib/plantuml.jar -testdot\n",
     "        ```\n",
     "        \n",
-    "    * 한글\n",
+    "    * 한글을 사용하려면 utf-8설정을 한다.\n",
     "        ```\n",
     "        $ export LANG = ko_KR.UTF-8\n",
     "        ```\n",
     "        \n",
     "        * 혹은 charset을 unicode라고 설정.\n",
     "        ```\n",
-    "        $ java -jar plantuml.jar -charset UTF-8 uml_duck.txt\n",
+    "        $ java -jar lib/plantuml.jar -charset UTF-8 uml_duck.txt\n",
     "        ```"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "#자바가 설치되어 있어야 plantuml.jar 실행\n",
+    "* 환경 설정을 하는 보다 자세한 설명\n",
+    "    * jdk가 설치되어 있어야 한다.\n",
+    "    * 디렉토리 확인\n",
+    "        * %pwd는 IPython에서 현재폴더를 읽어오는 명령어\n",
+    "        * os.path.join을 사용하면 폴더구분자로 인한 문제를 해결할 수 있다.\n",
+    "    * GRAPHVIZ 설정확인\n",
+    "        * 리눅스\n",
+    "            * /usr/bin/에 dot 실행파일이 있는 경우 별도 설정을 해주지 않아도 된다.\n",
+    "            * 리눅스 which명령어 사용해서 dot실행파일이 있는 곳을 알아낸댜.\n",
+    "            * 그 결과가 목록이므로, 첫번째 값을 실행파일로 설정해준다.\n",
+    "        * 맥 macport를 사용하는 경우, dot경로\n",
+    "            * mydotdir='/opt/local/bin/dot'\n",
+    "        * 윈도우 -> 환경변수에서 읽어온다.\n",
+    "            * mydot=\"C:\\\\Program Files (x86)\\\\Graphviz2.38\\\\bin\\\\dot.exe\"\n",
+    "    ```\n",
+    "    mywd=%pwd\n",
+    "    myplantdir=os.path.join(mywd,'lib')\n",
+    "    mydotdir=!which dot\n",
+    "    mydot=mydotdir[0]\n",
+    "    ```\n",
+    "    \n",
+    "    * plantuml\n",
+    "        * plantuml.jar가 설치되어 있는지 확인한다.\n",
+    "        * dot와 plantum.jar가 모두 설정되었으면 테스트가 실행되고 Ok가 뜬다.\n",
+    "    ```\n",
+    "    %cd {myplantdir}\n",
+    "    glob.glob(r'./*.jar')\n",
+    "    os.environ['GRAPHVIZ_DOT']=mydot\n",
+    "    !java -jar {myplantdir}/plantuml.jar -testdot\n",
+    "    ```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "java version \"1.7.0_51\"\r\n",
+      "Java(TM) SE Runtime Environment (build 1.7.0_51-b13)\r\n",
+      "Java HotSpot(TM) 64-Bit Server VM (build 24.51-b03, mixed mode)\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "#자바 설치 확인\n",
     "!java -version"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# 작업폴더 밑 lib폴더 안에 plantuml.jar를 저장한 경우\n",
-    "import os\n",
-    "mywd=%pwd\n",
-    "myplantdir=os.path.join(mywd,'lib')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -161,65 +193,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/jsl/Code/git/bb/p2/lib\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "['./plantuml.jar']"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# 현 디렉토리에 plantuml.jar파일이 존재하는지 확인한다.\n",
-    "import glob\n",
-    "%cd {myplantdir}\n",
-    "glob.glob(r'./*.jar')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The environment variable GRAPHVIZ_DOT has been set to /usr/bin/dot\r\n",
-      "Dot executable is /usr/bin/dot\r\n",
-      "Dot version: dot - graphviz version 2.38.0 (20140413.2041)\r\n",
-      "Installation seems OK. File generation OK\r\n"
-     ]
-    }
-   ],
-   "source": [
-    "# 리눅스 예\n",
-    "# 앞 느낌표는 쉘 명령어. {myplantdir}는 쉘에서 변수값을 읽어오는 것.\n",
-    "!java -jar {myplantdir}/plantuml.jar -testdot"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/usr/bin/dot\n",
-      "The environment variable GRAPHVIZ_DOT has been set to /usr/bin/dot\n",
-      "Dot executable is /usr/bin/dot\n",
+      "/Users/media/Code/git/sd\n",
+      "/Users/media/Code/git/sd/lib\n",
+      "The environment variable GRAPHVIZ_DOT has been set to /opt/local/bin/dot\n",
+      "Dot executable is /opt/local/bin/dot\n",
       "Dot version: dot - graphviz version 2.38.0 (20140413.2041)\n",
       "Installation seems OK. File generation OK\n"
      ]
@@ -227,15 +204,19 @@
    ],
    "source": [
     "import os\n",
-    "# dot 실행파일이 저장된 곳을 인식 못하는 경우 Python명령어를 이용해 환경변수를 설정할 수 있다.\n",
-    "# 1) macport를 사용하는 경우, dot경로\n",
-    "# mydotdir='/opt/local/bin/dot'\n",
-    "# 2) 윈도우 -> 환경변수에서 읽어온다.\n",
-    "# mydot=\"C:\\\\Program Files (x86)\\\\Graphviz2.38\\\\bin\\\\dot.exe\"\n",
-    "# 3) 리눅스 /usr/bin/에 dot 실행파일이 있는 경우 별도 설정을 해주지 않아도 된다.\n",
-    "mydot='/usr/bin/dot'\n",
+    "import glob\n",
+    "\n",
+    "mywd=%pwd\n",
+    "myplantdir=os.path.join(mywd,'lib')\n",
+    "mydotdir=!which dot\n",
+    "mydot=mydotdir[0]\n",
+    "\n",
+    "# plantuml.jar파일이 존재하는지 확인한후, 테스트\n",
+    "%cd {myplantdir}\n",
+    "glob.glob(r'./*.jar')\n",
+    "# dot 실행파일이 저장된 곳을 인식 못하는 경우, Python명령어를 이용해 환경변수를 설정할 수 있다.\n",
     "os.environ['GRAPHVIZ_DOT']=mydot\n",
-    "print os.environ['GRAPHVIZ_DOT']\n",
+    "# 리눅스 예: 앞 느낌표는 쉘 명령어. {myplantdir}는 쉘에서 변수값을 읽어오는 것.\n",
     "!java -jar {myplantdir}/plantuml.jar -testdot"
    ]
   },
@@ -285,41 +266,6 @@
    "outputs": [],
    "source": [
     "%load_ext plantuml_magics"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {
-    "collapsed": false,
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/jsl/Code/git/bb/p2/lib\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "['./plantuml.jar']"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# 현 디렉토리에 plantuml.jar파일이 존재하는지 확인한다.\n",
-    "import glob\n",
-    "%cd {myplantdir}\n",
-    "glob.glob(r'./*.jar')"
    ]
   },
   {
