--- a/2_intro_dp.ipynb
+++ b/2_intro_dp.ipynb
@@ -238,59 +238,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/Users/media/Code/git/sd/lib\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%cd ~/Code/git/sd/lib"
+    "import os\n",
+    "# 작업폴더를 저장해 놓는다.\n",
+    "mywd=%pwd\n",
+    "# 작업폴더 밑 lib폴더 안에 plantuml.jar를 저장한 경우\n",
+    "myplantdir=os.path.join(mywd,'lib')\n",
+    "# 1) 리눅스 /usr/bin/에 dot 실행파일이 있는 경우 별도 설정을 해주지 않아도 된다.\n",
+    "# 리눅스 which명령어 사용해서 dot실행파일이 있는 곳을 알아낸댜.\n",
+    "# 그 결과가 목록이므로, 첫번째 값을 실행파일로 설정해준다.\n",
+    "# 2) 맥 macport를 사용하는 경우, dot경로\n",
+    "# mydotdir='/opt/local/bin/dot'\n",
+    "# 2) 윈도우 -> 환경변수에서 읽어온다.\n",
+    "# mydot=\"C:\\\\Program Files (x86)\\\\Graphviz2.38\\\\bin\\\\dot.exe\"\n",
+    "mydotdir=!which dot\n",
+    "mydot=mydotdir[0]\n",
+    "# 2) 윈도우 -> 환경변수에서 가져와서 설정해준다.\n",
+    "# mydot=\"C:\\\\Program Files (x86)\\\\Graphviz2.38\\\\bin\\\\dot.exe\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-rw-r--r--@ 1 media  staff  3557460  8 22  2015 plantuml.jar\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!ls -l plantuml.jar"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/opt/local/bin/dot\r\n"
-     ]
-    }
-   ],
-   "source": [
-    "!which dot"
+    "# plantuml.jar파일이 존재하는지 확인한다.\n",
+    "import glob\n",
+    "%cd {myplantdir}\n",
+    "glob.glob(r'./*.jar')"
    ]
   },
   {
@@ -310,7 +293,9 @@
    ],
    "source": [
     "import os\n",
-    "os.environ['GRAPHVIZ_DOT']='/opt/local/bin/dot'\n",
+    "# dot 실행파일이 저장된 곳을 인식 못하는 경우 Python명령어를 이용해 환경변수를 설정할 수 있다.\n",
+    "# 학습하기 위해 경로를 설정해준다.\n",
+    "os.environ['GRAPHVIZ_DOT']=mydot\n",
     "print os.environ['GRAPHVIZ_DOT']"
    ]
   },
@@ -334,7 +319,7 @@
    ],
    "source": [
     "# 모두 되었으면 test명령어가 문제 없이 실행되어야 한다.\n",
-    "!java -jar plantuml.jar -testdot"
+    "!java -jar {myplantdir}/plantuml.jar -testdot"
    ]
   },
   {
@@ -349,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -370,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -384,12 +369,12 @@
     }
    ],
    "source": [
-    "%cd ~/Code/git/sd/lib"
+    "%cd {myplantdir}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -397,13 +382,13 @@
     {
      "data": {
       "image/svg+xml": [
-       "<svg height=\"276px\" style=\"width:119px;height:276px;\" version=\"1.1\" viewBox=\"0 0 119 276\" width=\"119px\" xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\"><defs><filter height=\"300%\" id=\"f1\" width=\"300%\" x=\"-1\" y=\"-1\"><feGaussianBlur result=\"blurOut\" stdDeviation=\"2.0\"/><feColorMatrix in=\"blurOut\" result=\"blurOut2\" type=\"matrix\" values=\"0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 .4 0\"/><feOffset dx=\"4.0\" dy=\"4.0\" in=\"blurOut2\" result=\"blurOut3\"/><feBlend in=\"SourceGraphic\" in2=\"blurOut3\" mode=\"normal\"/></filter></defs><g><rect fill=\"#FEFECE\" filter=\"url(#f1)\" height=\"125.7305\" style=\"stroke: #A80036; stroke-width: 1.5;\" width=\"84\" x=\"16\" y=\"8\"/><ellipse cx=\"39.1\" cy=\"24\" fill=\"#ADD1B2\" rx=\"11\" ry=\"11\" style=\"stroke: #A80036; stroke-width: 1.0;\"/><path d=\"M42.0731,29.6431 Q41.4921,29.9419 40.8529,30.0913 Q40.2138,30.2407 39.5082,30.2407 Q37.0014,30.2407 35.6815,28.5889 Q34.3617,26.937 34.3617,23.8159 Q34.3617,20.6865 35.6815,19.0347 Q37.0014,17.3828 39.5082,17.3828 Q40.2138,17.3828 40.8612,17.5322 Q41.5087,17.6816 42.0731,17.9805 L42.0731,20.7031 Q41.4423,20.1221 40.8488,19.8523 Q40.2553,19.5825 39.6244,19.5825 Q38.2797,19.5825 37.5949,20.6492 Q36.9101,21.7158 36.9101,23.8159 Q36.9101,25.9077 37.5949,26.9744 Q38.2797,28.041 39.6244,28.041 Q40.2553,28.041 40.8488,27.7712 Q41.4423,27.5015 42.0731,26.9204 Z \"/><text fill=\"#000000\" font-family=\"sans-serif\" font-size=\"12\" lengthAdjust=\"spacingAndGlyphs\" textLength=\"34\" x=\"54.9\" y=\"28.5352\">Turtle</text><line style=\"stroke: #A80036; stroke-width: 1.5;\" x1=\"17\" x2=\"99\" y1=\"40\" y2=\"40\"/><line style=\"stroke: #A80036; stroke-width: 1.5;\" x1=\"17\" x2=\"99\" y1=\"48\" y2=\"48\"/><ellipse cx=\"27\" cy=\"59.9775\" fill=\"#84BE84\" rx=\"3\" ry=\"3\" style=\"stroke: #038048; stroke-width: 1.0;\"/><text fill=\"#000000\" font-family=\"sans-serif\" font-size=\"11\" lengthAdjust=\"spacingAndGlyphs\" textLength=\"21\" x=\"36\" y=\"62.6348\">bk()</text><ellipse cx=\"27\" cy=\"72.9326\" fill=\"#84BE84\" rx=\"3\" ry=\"3\" style=\"stroke: #038048; stroke-width: 1.0;\"/><text fill=\"#000000\" font-family=\"sans-serif\" font-size=\"11\" lengthAdjust=\"spacingAndGlyphs\" textLength=\"19\" x=\"36\" y=\"75.5898\">fd()</text><ellipse cx=\"27\" cy=\"85.8877\" fill=\"#84BE84\" rx=\"3\" ry=\"3\" style=\"stroke: #038048; stroke-width: 1.0;\"/><text fill=\"#000000\" font-family=\"sans-serif\" font-size=\"11\" lengthAdjust=\"spacingAndGlyphs\" textLength=\"25\" x=\"36\" y=\"88.5449\">left()</text><ellipse cx=\"27\" cy=\"98.8428\" fill=\"#84BE84\" rx=\"3\" ry=\"3\" style=\"stroke: #038048; stroke-width: 1.0;\"/><text fill=\"#000000\" font-family=\"sans-serif\" font-size=\"11\" lengthAdjust=\"spacingAndGlyphs\" textLength=\"34\" x=\"36\" y=\"101.5\">right()</text><ellipse cx=\"27\" cy=\"111.7979\" fill=\"#84BE84\" rx=\"3\" ry=\"3\" style=\"stroke: #038048; stroke-width: 1.0;\"/><text fill=\"#000000\" font-family=\"sans-serif\" font-size=\"11\" lengthAdjust=\"spacingAndGlyphs\" textLength=\"43\" x=\"36\" y=\"114.4551\">penUp()</text><ellipse cx=\"27\" cy=\"124.7529\" fill=\"#84BE84\" rx=\"3\" ry=\"3\" style=\"stroke: #038048; stroke-width: 1.0;\"/><text fill=\"#000000\" font-family=\"sans-serif\" font-size=\"11\" lengthAdjust=\"spacingAndGlyphs\" textLength=\"58\" x=\"36\" y=\"127.4102\">penDown()</text><rect fill=\"#FEFECE\" filter=\"url(#f1)\" height=\"73.9102\" style=\"stroke: #A80036; stroke-width: 1.5;\" width=\"104\" x=\"6\" y=\"194\"/><ellipse cx=\"21\" cy=\"210\" fill=\"#ADD1B2\" rx=\"11\" ry=\"11\" style=\"stroke: #A80036; stroke-width: 1.0;\"/><path d=\"M23.9731,215.6431 Q23.3921,215.9419 22.7529,216.0913 Q22.1138,216.2407 21.4082,216.2407 Q18.9014,216.2407 17.5815,214.5889 Q16.2617,212.937 16.2617,209.8159 Q16.2617,206.6865 17.5815,205.0347 Q18.9014,203.3828 21.4082,203.3828 Q22.1138,203.3828 22.7612,203.5322 Q23.4087,203.6816 23.9731,203.9805 L23.9731,206.7031 Q23.3423,206.1221 22.7488,205.8523 Q22.1553,205.5825 21.5244,205.5825 Q20.1797,205.5825 19.4949,206.6492 Q18.8101,207.7158 18.8101,209.8159 Q18.8101,211.9077 19.4949,212.9744 Q20.1797,214.041 21.5244,214.041 Q22.1553,214.041 22.7488,213.7712 Q23.3423,213.5015 23.9731,212.9204 Z \"/><text fill=\"#000000\" font-family=\"sans-serif\" font-size=\"12\" lengthAdjust=\"spacingAndGlyphs\" textLength=\"72\" x=\"35\" y=\"214.5352\">WeightTurtle</text><line style=\"stroke: #A80036; stroke-width: 1.5;\" x1=\"7\" x2=\"109\" y1=\"226\" y2=\"226\"/><polygon fill=\"none\" points=\"17,232.9775,21,236.9775,17,240.9775,13,236.9775\" style=\"stroke: #B38D22; stroke-width: 1.0;\"/><text fill=\"#000000\" font-family=\"sans-serif\" font-size=\"11\" lengthAdjust=\"spacingAndGlyphs\" textLength=\"52\" x=\"26\" y=\"240.6348\">weight:int</text><line style=\"stroke: #A80036; stroke-width: 1.5;\" x1=\"7\" x2=\"109\" y1=\"246.9551\" y2=\"246.9551\"/><ellipse cx=\"17\" cy=\"258.9326\" fill=\"#84BE84\" rx=\"3\" ry=\"3\" style=\"stroke: #038048; stroke-width: 1.0;\"/><text fill=\"#000000\" font-family=\"sans-serif\" font-size=\"11\" lengthAdjust=\"spacingAndGlyphs\" textLength=\"78\" x=\"26\" y=\"261.5898\">getWeight():int</text><path d=\"M58,154.604 C58,168.4265 58,182.1011 58,193.9311 \" fill=\"none\" style=\"stroke: #A80036; stroke-width: 1.0;\"/><polygon fill=\"none\" points=\"51.0001,154.446,58,134.446,65.0001,154.446,51.0001,154.446\" style=\"stroke: #A80036; stroke-width: 1.0;\"/></g></svg>"
+       "<svg height=\"195px\" style=\"width:269px;height:195px;background:#000000;\" version=\"1.1\" viewBox=\"0 0 269 195\" width=\"269px\" xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\"><defs/><g><text fill=\"#33FF02\" font-family=\"sans-serif\" font-size=\"14\" font-weight=\"bold\" lengthAdjust=\"spacingAndGlyphs\" textLength=\"209\" x=\"0\" y=\"13.5352\">Dot Executable: /usr/bin/dot</text><text fill=\"#33FF02\" font-family=\"sans-serif\" font-size=\"14\" font-weight=\"bold\" lengthAdjust=\"spacingAndGlyphs\" textLength=\"134\" x=\"0\" y=\"30.0234\">File does not exist</text><text fill=\"#33FF02\" font-family=\"sans-serif\" font-size=\"14\" font-weight=\"bold\" lengthAdjust=\"spacingAndGlyphs\" textLength=\"268\" x=\"0\" y=\"46.5117\">Cannot find Graphviz. You should try</text><text fill=\"#33FF02\" font-family=\"sans-serif\" font-size=\"14\" font-weight=\"bold\" lengthAdjust=\"spacingAndGlyphs\" textLength=\"0\" x=\"5\" y=\"63\"/><text fill=\"#33FF02\" font-family=\"sans-serif\" font-size=\"14\" font-weight=\"bold\" lengthAdjust=\"spacingAndGlyphs\" textLength=\"74\" x=\"0\" y=\"79.4883\">@startuml</text><text fill=\"#33FF02\" font-family=\"sans-serif\" font-size=\"14\" font-weight=\"bold\" lengthAdjust=\"spacingAndGlyphs\" textLength=\"52\" x=\"0\" y=\"95.9766\">testdot</text><text fill=\"#33FF02\" font-family=\"sans-serif\" font-size=\"14\" font-weight=\"bold\" lengthAdjust=\"spacingAndGlyphs\" textLength=\"66\" x=\"0\" y=\"112.4648\">@enduml</text><text fill=\"#33FF02\" font-family=\"sans-serif\" font-size=\"14\" font-weight=\"bold\" lengthAdjust=\"spacingAndGlyphs\" textLength=\"0\" x=\"5\" y=\"128.9531\"/><text fill=\"#33FF02\" font-family=\"sans-serif\" font-size=\"14\" font-weight=\"bold\" lengthAdjust=\"spacingAndGlyphs\" textLength=\"15\" x=\"5\" y=\"145.4414\">or</text><text fill=\"#33FF02\" font-family=\"sans-serif\" font-size=\"14\" font-weight=\"bold\" lengthAdjust=\"spacingAndGlyphs\" textLength=\"0\" x=\"5\" y=\"161.9297\"/><text fill=\"#33FF02\" font-family=\"sans-serif\" font-size=\"14\" font-weight=\"bold\" lengthAdjust=\"spacingAndGlyphs\" textLength=\"220\" x=\"0\" y=\"178.418\">java -jar plantuml.jar -testdot</text><text fill=\"#33FF02\" font-family=\"sans-serif\" font-size=\"14\" font-weight=\"bold\" lengthAdjust=\"spacingAndGlyphs\" textLength=\"0\" x=\"5\" y=\"194.9063\"/></g></svg>"
       ],
       "text/plain": [
        "<IPython.core.display.SVG object>"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
