--- a/3_observer.ipynb
+++ b/3_observer.ipynb
@@ -22,33 +22,76 @@
    "metadata": {},
    "source": [
     "* 환경\n",
+    "    * jdk가 설치되어 있어야 한다.\n",
     "    * 디렉토리 확인\n",
+    "        * %pwd는 IPython에서 현재폴더를 읽어오는 명령어\n",
+    "        * os.path.join을 사용하면 폴더구분자로 인한 문제를 해결할 수 있다.\n",
+    "    * GRAPHVIZ 설정확인\n",
+    "        * 리눅스\n",
+    "            * /usr/bin/에 dot 실행파일이 있는 경우 별도 설정을 해주지 않아도 된다.\n",
+    "            * 리눅스 which명령어 사용해서 dot실행파일이 있는 곳을 알아낸댜.\n",
+    "            * 그 결과가 목록이므로, 첫번째 값을 실행파일로 설정해준다.\n",
+    "        * 맥 macport를 사용하는 경우, dot경로\n",
+    "            * mydotdir='/opt/local/bin/dot'\n",
+    "        * 윈도우 -> 환경변수에서 읽어온다.\n",
+    "            * mydot=\"C:\\\\Program Files (x86)\\\\Graphviz2.38\\\\bin\\\\dot.exe\"\n",
+    "    ```\n",
+    "    mywd=%pwd\n",
+    "    myplantdir=os.path.join(mywd,'lib')\n",
+    "    mydotdir=!which dot\n",
+    "    mydot=mydotdir[0]\n",
+    "    ```\n",
+    "    \n",
     "    * plantuml\n",
-    "    * jdk"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "myhome=os.path.expanduser('~')\n",
-    "mywd=os.path.join(myhome,'Code/git/sd/')\n",
-    "plantdir=os.path.join(myhome,'Code/git/sd/lib/')"
+    "        * plantuml.jar가 설치되어 있는지 확인한다.\n",
+    "        * dot와 plantum.jar가 모두 설정되었으면 테스트가 실행되고 Ok가 뜬다.\n",
+    "    ```\n",
+    "    %cd {myplantdir}\n",
+    "    glob.glob(r'./*.jar')\n",
+    "    os.environ['GRAPHVIZ_DOT']=mydot\n",
+    "    !java -jar {myplantdir}/plantuml.jar -testdot\n",
+    "    ```"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": false,
-    "slideshow": {
-     "slide_type": "slide"
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/media/Code/git/sd/lib\n",
+      "The environment variable GRAPHVIZ_DOT has been set to /opt/local/bin/dot\n",
+      "Dot executable is /opt/local/bin/dot\n",
+      "Dot version: dot - graphviz version 2.38.0 (20140413.2041)\n",
+      "Installation seems OK. File generation OK\n"
+     ]
     }
+   ],
+   "source": [
+    "import os\n",
+    "import glob\n",
+    "\n",
+    "mywd=%pwd\n",
+    "myplantdir=os.path.join(mywd,'lib')\n",
+    "mydotdir=!which dot\n",
+    "mydot=mydotdir[0]\n",
+    "\n",
+    "%cd {myplantdir}\n",
+    "glob.glob(r'./*.jar')\n",
+    "os.environ['GRAPHVIZ_DOT']=mydot\n",
+    "!java -jar {myplantdir}/plantuml.jar -testdot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
    },
    "outputs": [
     {
@@ -66,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -76,83 +119,6 @@
    "outputs": [],
    "source": [
     "%load_ext plantuml_magics"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": false,
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['./plantuml.jar']"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import glob\n",
-    "glob.glob(r'./*.jar')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": false,
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/opt/local/bin/dot\r\n"
-     ]
-    }
-   ],
-   "source": [
-    "!which dot"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": false,
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/opt/local/bin/dot\n",
-      "The environment variable GRAPHVIZ_DOT has been set to /opt/local/bin/dot\n",
-      "Dot executable is /opt/local/bin/dot\n",
-      "Dot version: dot - graphviz version 2.38.0 (20140413.2041)\n",
-      "Installation seems OK. File generation OK\n"
-     ]
-    }
-   ],
-   "source": [
-    "import os\n",
-    "os.environ['GRAPHVIZ_DOT']='/opt/local/bin/dot'\n",
-    "print os.environ['GRAPHVIZ_DOT']\n",
-    "!java -jar plantuml.jar -testdot"
    ]
   },
   {
@@ -770,6 +736,7 @@
    "source": [
     "## 6.2 거북이\n",
     "\n",
+    "### 6.2.1 아기 거북이 지켜보기\n",
     "\n",
     "* 내용\n",
     "    * 아기거북이가 여기 저기 다닌다.\n",
@@ -891,6 +858,17 @@
    "source": [
     "!javac -d classes/ -cp lib/aplu5.jar:classes/ -sourcepath src/ src/com/sd/turtle/TurtleObserverMain.java \n",
     "!java -cp lib/aplu5.jar:classes/ com.sd.turtle.TurtleObserverMain"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 6.2.2 거북이 키/마우스로 움직이기\n",
+    "\n",
+    "* 키보드/ 마우스에 이벤트가 발생하면 거북이를 움직인다.\n",
+    "* Observer패턴을 사용한다.\n",
+    "* KeyAdapter, MouseAdapter, MouseMotionAdapter를 사용한다.\n"
    ]
   }
  ],
