--- a/6_singleton.ipynb
+++ b/6_singleton.ipynb
@@ -87,9 +87,47 @@
    "source": [
     "# 2. 문제\n",
     "\n",
-    "* 클래스에 대해 객체가 오직 1개만 생성 해야 하는 상황.\n",
+    "* 커피 바리스타가 많은 경우\n",
+    "     * 커피를 주문하고 오래 걸려서 다른 바리스타에게 '주문이 나오지 않았다'고 말하는 경우\n",
+    "     * 커피바리스타는 서로 확인하지 않고 커피를 만든다.\n",
+    "     * 고객이 여러 번 '커피가 나오지 않았다'고 확인할 때마다 커피를 만들면 문제\n",
+    "* 클래스에 대해 객체를 1개만 생성 해야 하는 상황.\n",
     "    * 로그 logger, 프린트 spooler\n",
     "* 독점의 문제? 사용 중 -> 오랫 동안 사용하면 문제"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/media/Code/git/sd/lib\n",
+      "The environment variable GRAPHVIZ_DOT has been set to /opt/local/bin/dot\n",
+      "Dot executable is /opt/local/bin/dot\n",
+      "Dot version: dot - graphviz version 2.38.0 (20140413.2041)\n",
+      "Installation seems OK. File generation OK\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import glob\n",
+    "\n",
+    "mywd=%pwd\n",
+    "myplantdir=os.path.join(mywd,'lib')\n",
+    "mydotdir=!which dot\n",
+    "mydot=mydotdir[0]\n",
+    "\n",
+    "%cd {myplantdir}\n",
+    "glob.glob(r'./*.jar')\n",
+    "os.environ['GRAPHVIZ_DOT']=mydot\n",
+    "!java -jar {myplantdir}/plantuml.jar -testdot"
    ]
   },
   {
@@ -130,83 +168,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {
-    "collapsed": false,
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['./plantuml.jar']"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import glob\n",
-    "glob.glob(r'./*.jar')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {
-    "collapsed": false,
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/opt/local/bin/dot\r\n"
-     ]
-    }
-   ],
-   "source": [
-    "!which dot"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {
-    "collapsed": false,
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/opt/local/bin/dot\n",
-      "The environment variable GRAPHVIZ_DOT has been set to /opt/local/bin/dot\n",
-      "Dot executable is /opt/local/bin/dot\n",
-      "Dot version: dot - graphviz version 2.38.0 (20140413.2041)\n",
-      "Installation seems OK. File generation OK\n"
-     ]
-    }
-   ],
-   "source": [
-    "import os\n",
-    "os.environ['GRAPHVIZ_DOT']='/opt/local/bin/dot'\n",
-    "print os.environ['GRAPHVIZ_DOT']\n",
-    "!java -jar plantuml.jar -testdot"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
@@ -216,8 +177,7 @@
    "source": [
     "# 3. before\n",
     "\n",
-    "* 커피를 주문, 요리사가 여럿\n",
-    "     * 주문이 안나와서 - 주문을 여러 번 하는 경우 바리스타가 다르면 여러 잔을 내림.\n",
+    "* 고객이 '커피가 나오지 않았다'고 확인할 때마다, 커피바리스타가 주문이 실행되고 있는지 서로 확인하지 않고 커피를 만들면 문제\n",
     "* 커피보일러 -> 초콜릿 보일러"
    ]
   },
