--- a/1_hello_plantuml.ipynb
+++ b/1_hello_plantuml.ipynb
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -193,7 +193,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/media/Code/git/sd\n",
       "/Users/media/Code/git/sd/lib\n",
       "The environment variable GRAPHVIZ_DOT has been set to /opt/local/bin/dot\n",
       "Dot executable is /opt/local/bin/dot\n",
@@ -210,6 +209,7 @@
     "myplantdir=os.path.join(mywd,'lib')\n",
     "mydotdir=!which dot\n",
     "mydot=mydotdir[0]\n",
+    "# mydot=\"C:\\\\Program Files (x86)\\\\Graphviz2.38\\\\bin\\\\dot.exe\"\n",
     "\n",
     "# plantuml.jar파일이 존재하는지 확인한후, 테스트\n",
     "%cd {myplantdir}\n",
