--- a/2_intro_dp.ipynb
+++ b/2_intro_dp.ipynb
@@ -607,6 +607,21 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "http://stackoverflow.com/questions/1673841/examples-of-gof-design-patterns-in-javas-core-libraries\n",
+    "\n",
+    "종류 | 디자인패턴\n",
+    "---|---\n",
+    "Mediator | \n",
+    "Memento | java.util.Date\n",
+    "Strategy | java.util.Comparator\n",
+    "Template | java.io.InputStream, java.io.OutputStream, java.io.Reader, java.io.Writer\n",
+    "visitor | java.nio.file.FileVisitor"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
