--- a/7_command.ipynb
+++ b/7_command.ipynb
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -141,14 +141,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The plantuml_magics extension is already loaded. To reload it, use:\n",
+      "  %reload_ext plantuml_magics\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext plantuml_magics"
    ]
@@ -172,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -189,7 +198,7 @@
        "<IPython.core.display.SVG object>"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
