--- a/8_adapter.ipynb
+++ b/8_adapter.ipynb
@@ -28,11 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
+   "metadata": {},
    "source": [
     "# 1. Adapter 패턴\n",
     "\n",
@@ -43,17 +39,36 @@
     "    * 전기 플러그 (p.236)\n",
     "        * 서로 다른 플러그 (유럽, 미국)의 경우, adapter를 사용.\n",
     "    * command pattern과 비교 - behavioral pattern\n",
+    "        * legacy code를 변경하지 않고 그대로 사용할 경우"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "* cases\n",
     "    * HFDP Duck, Turkey\n",
-    "    * enumerators (p.248)\n",
-    "        * hasMoreElements()\n",
-    "        * nextElement()\n",
-    "    * iterators (p.248)\n",
-    "        * hasNext()\n",
-    "        * next()\n",
-    "        * remove()\n",
-    "    * legacy code를 변경하지 않고 그대로 사용할 경우\n",
-    "\n",
+    "    * enumerators (p.248) vs iterators\n",
+    "        * enumerators\n",
+    "            * hasMoreElements()\n",
+    "            * nextElement()\n",
+    "        * iterators (p.248)\n",
+    "            * hasNext()\n",
+    "            * next()\n",
+    "            * remove()\n",
+    "    * Patterns in java\n",
+    "        * Arrays asList\n",
+    "        * 자바 KeyAdapter, MouseAdpater는 GoF Adapter패턴을 사용하지 않는다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "* 디자인패턴 요소\n",
     "\n",
     "요소 | 설명\n",
@@ -101,6 +116,44 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/media/Code/git/sd/lib\n",
+      "The environment variable GRAPHVIZ_DOT has been set to /opt/local/bin/dot\n",
+      "Dot executable is /opt/local/bin/dot\n",
+      "Dot version: dot - graphviz version 2.38.0 (20140413.2041)\n",
+      "Installation seems OK. File generation OK\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import glob\n",
+    "\n",
+    "mywd=%pwd\n",
+    "myplantdir=os.path.join(mywd,'lib')\n",
+    "mydotdir=!which dot\n",
+    "mydot=mydotdir[0]\n",
+    "# mydot=\"C:\\\\Program Files (x86)\\\\Graphviz2.38\\\\bin\\\\dot.exe\"\n",
+    "\n",
+    "# plantuml.jar파일이 존재하는지 확인한후, 테스트\n",
+    "%cd {myplantdir}\n",
+    "glob.glob(r'./*.jar')\n",
+    "# dot 실행파일이 저장된 곳을 인식 못하는 경우, Python명령어를 이용해 환경변수를 설정할 수 있다.\n",
+    "os.environ['GRAPHVIZ_DOT']=mydot\n",
+    "# 리눅스 예: 앞 느낌표는 쉘 명령어. {myplantdir}는 쉘에서 변수값을 읽어오는 것.\n",
+    "!java -jar {myplantdir}/plantuml.jar -testdot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "slide"
@@ -122,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -132,83 +185,6 @@
    "outputs": [],
    "source": [
     "%load_ext plantuml_magics"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": false,
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['./plantuml.jar']"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import glob\n",
-    "glob.glob(r'./*.jar')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {
-    "collapsed": false,
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/opt/local/bin/dot\r\n"
-     ]
-    }
-   ],
-   "source": [
-    "!which dot"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": false,
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/opt/local/bin/dot\n",
-      "The environment variable GRAPHVIZ_DOT has been set to /opt/local/bin/dot\n",
-      "Dot executable is /opt/local/bin/dot\n",
-      "Dot version: dot - graphviz version 2.38.0 (20140413.2041)\n",
-      "Installation seems OK. File generation OK\n"
-     ]
-    }
-   ],
-   "source": [
-    "import os\n",
-    "os.environ['GRAPHVIZ_DOT']='/opt/local/bin/dot'\n",
-    "print os.environ['GRAPHVIZ_DOT']\n",
-    "!java -jar plantuml.jar -testdot"
    ]
   },
   {
@@ -844,14 +820,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "image/svg+xml": [
+       "<svg height=\"123px\" style=\"width:369px;height:123px;background:#000000;\" version=\"1.1\" viewBox=\"0 0 369 123\" width=\"369px\" xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\"><defs/><g><text fill=\"#33FF02\" font-family=\"sans-serif\" font-size=\"14\" font-weight=\"bold\" lengthAdjust=\"spacingAndGlyphs\" textLength=\"368\" x=\"0\" y=\"13.5352\">[From /Users/media/Code/git/sd/lib/.plt (line 8) ]</text><line style=\"stroke: #33FF02; stroke-width: 1.0;\" x1=\"0\" x2=\"368\" y1=\"21.4883\" y2=\"21.4883\"/><text fill=\"#33FF02\" font-family=\"sans-serif\" font-size=\"14\" font-weight=\"bold\" lengthAdjust=\"spacingAndGlyphs\" textLength=\"155\" x=\"0\" y=\"40.0234\">... (skipping 4 lines) ...</text><text fill=\"#33FF02\" font-family=\"sans-serif\" font-size=\"14\" font-weight=\"bold\" lengthAdjust=\"spacingAndGlyphs\" textLength=\"208\" x=\"20\" y=\"56.5117\">+hasMoreElements():boolean</text><text fill=\"#33FF02\" font-family=\"sans-serif\" font-size=\"14\" font-weight=\"bold\" lengthAdjust=\"spacingAndGlyphs\" textLength=\"160\" x=\"20\" y=\"73\">+nextElement():Object</text><text fill=\"#33FF02\" font-family=\"sans-serif\" font-size=\"14\" font-weight=\"bold\" lengthAdjust=\"spacingAndGlyphs\" textLength=\"5\" x=\"0\" y=\"89.4883\">}</text><text fill=\"#33FF02\" font-family=\"sans-serif\" font-size=\"14\" font-weight=\"bold\" lengthAdjust=\"spacingAndGlyphs\" textLength=\"163\" x=\"0\" y=\"105.9766\">inteface Enumeration {</text><text fill=\"#33FF02\" font-family=\"sans-serif\" font-size=\"14\" font-weight=\"bold\" lengthAdjust=\"spacingAndGlyphs\" textLength=\"0\" x=\"5\" y=\"122.4648\"/><text fill=\"#FF0000\" font-family=\"sans-serif\" font-size=\"14\" font-weight=\"bold\" lengthAdjust=\"spacingAndGlyphs\" textLength=\"94\" x=\"5\" y=\"122.4648\">Syntax Error?</text></g></svg>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.SVG object>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%%plantuml\n",
     "@startuml\n",
@@ -988,13 +978,76 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6.3 Arrays adapter\n",
+    "\n",
+    "* Arrays의 리스트 변환 Adapter\n",
+    "* asList() 함수를 이용하여, Arrays를 고정크기의 List로 변환.\n",
+    "* 변환된 List는 ArraysAdapter로서 Arrays의 특징을 가지게 된다.\n",
+    "    * List로 변환하더라도, 고정크기이므로 add, remove는 사용할 수 없다.\n",
+    "    * 그러나 List로 변환하고, List의 set()함수를 이용하여, 데이터를 변경할 수 있다 (단, 원래 Arrays도 변경된다)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "> import java.util.Arrays\n",
+    "> String[] cities = {\"seoul\",\"incheon\",\"busan\",\"sejong\"}\n",
+    "> import java.util.List\n",
+    "> List cityList=Arrays.asList(cities)\n",
+    "> cityList.size()\n",
+    "4\n",
+    "> cities.length\n",
+    "4\n",
+    "> cityList.set(0,\"suwon\")\n",
+    "\"seoul\"\n",
+    "> cityList\n",
+    "[suwon, incheon, busan, sejong]\n",
+    "> cities\n",
+    "{ suwon, incheon, busan, sejong }\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* 데이터를 추가할 수 있도록, Arrays를 ArrayList로 변환할 수 있다.\n",
+    "    ```\n",
+    "    Arraylist cityArrayList = new Arraylist();\n",
+    "    cityArrayList.addAll(Arrays.asList(cities));\n",
+    "    ```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "> import java.util.ArrayList;\n",
+    "> ArrayList cityArrayList = new ArrayList();\n",
+    "> cityArrayList.addAll(Arrays.asList(cities));\n",
+    "> cities\n",
+    "{ suwon, incheon, busan, sejong }\n",
+    "> cityArrayList.add(\"jeju\")\n",
+    "true\n",
+    "> cityArrayList\n",
+    "[suwon, incheon, busan, sejong, jeju]\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
    "source": [
-    "## 6.3 HomeThreater\n",
+    "## 6.4 HomeThreater\n",
     "\n",
     "* Facade Pattern (p.254 ~ )\n",
     "* 많은 기기를 중앙 통제 (모든 기기의 사용법을 알 필요 없슴 Least Knowledge)"
