--- a/j_1_hello_java.ipynb
+++ b/j_1_hello_java.ipynb
@@ -12,10 +12,10 @@
     "\n",
     "* 객체지향 프로그래밍을 배운다. 클래스, 객체, 가시성, 생성자, 반복문, 배열, 조건과 같은 프로그래밍에 필요한 내용을 배운다. 객체지향 방식의 예외처리, 패키지, 입출력, GUI와 이벤트를 배운다. 객체지향의 주요한 특징으로 상속, 다형성에 대해 배운다.\n",
     "* 강의를 듣고 나면, 클래스를 사용해 간단한 프로그램을 만들 수 있게 된다.\n",
-    "    * 클래스를 5개 정도 - 연관, 상속, 다형성 사용\n",
+    "    * 클래스 5개 정도 - 연관, 상속, 다형성 사용\n",
     "    * 클래스 1개에 100줄 정도, 수 백줄 프로그래밍을 만들 수 있다.\n",
     "* 강의를 어떻게 하려고 하나\n",
-    "    * Object first approach. 데이터 타잎, 입출력, 함수 등을 배워나가기 보다는 객체지향으로 프로그램을 배운다.\n",
+    "    * Object first approach. 데이터 타잎, 입출력, 함수 등을 먼저 배우기 보다는, 객체지향으로 바로 시작한다.\n",
     "    * 예제로 배운다 Learn by example\n",
     "        * 예제는 쉽지만, 너무 쉽지 않고 재미있게\n",
     "    * 그림으로 배운다 UML\n",
@@ -27,7 +27,7 @@
     "* 자신이 자바를 배워야 하는 이유를 말할 수 있다.\n",
     "* 자바의 특징을 이해할 수 있다.\n",
     "* 자바 실행 환경을 설치할 수 있다.\n",
-    "* 자바 jshell을 사용할 수 있다.다\n",
+    "* 자바 jshell을 사용할 수 있다.\n",
     "\n",
     "### 1.1.3 문제\n",
     "\n",
@@ -89,12 +89,12 @@
     "## 1.3 프로그램이란\n",
     "\n",
     "* 프로그래밍은 어떤 문제를 컴퓨터로 하여금 풀 수 있도록, 컴퓨터가 실행할 수 있는 명령문으로 작성하는 것이다.\n",
-    "* 객체지향 프로그래밍 (OOP, Object-Oriented Programming)에서는 컴퓨터가 실행하는 단위가 '클래스'이다. 함수프로그램에서는 함수가 실행단위이다.\n",
+    "* 객체지향 프로그래밍 (OOP, Object-Oriented Programming)에서는 컴퓨터가 실행하는 단위가 '클래스'이다. 함수프로그램에서는 함수가 실행단위이다.듦\n",
     "* 클래스는 '재사용'하기 유리한 구조를 가지고 있다. 프로그래밍을 더 빠르게, 더 좋게 할 수 있다 (faster and better).\n",
     "* 객체지향 프로그래밍의 절차:\n",
-    "    * 설계 - 요구사항을 해결할 수 있는 클래스와 그 관계를 만든다.\n",
+    "    * 설계 - 요구사항을 해결할 수 있도록 클래스와 그 관계를 만든다.\n",
     "    * 개발 (hfj p.2~3)\n",
-    "        * 코딩 - 설계된 클래스를 원시코드로 만듬\n",
+    "        * 코딩 - 설계된 클래스를 원시코드로 만듦\n",
     "        * compile - byte로 만듦\n",
     "        * 실행 - jvm에 byte code를 읽어서 실행 (jvm이 다양한 기기에서 실행되므로, WORA라고 말함)\n",
     "        * 디버깅 - 오류를 제거.\n",
