--- a/j_2_3_hello_class.ipynb
+++ b/j_2_3_hello_class.ipynb
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -353,13 +353,46 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* 객체를 만들 때도 같은 방식이다. 오른편에는 값, 왼편에는 이름을 가진다.\n",
+    "* 객체를 만들 때도 같은 방식이다.\n",
     "    ```\n",
     "    DataType name = new DataType\n",
     "    ```\n",
-    "    \n",
-    "* 변수a를 생성하는 것은 값만 저장\n",
-    "* 아래 예에서, 객체h는 Hello클래스를 저장.\n",
+    "\n",
+    "* 변수의 경우 오른편에는 값, 왼편에는 이름을 가진다.\n",
+    "* 객체의 경우 오른 편은 클래스의 객체를 생성하는 'new' 명령어이다.\n",
+    "    * 객체를 생성하는 'new' 명령어를 사용하면 객체의 id를 볼 수 있다.\n",
+    "    * 객체의 id는 hashCode라고 하며 서로 다르다 (여권번호와 같이)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " new Hello();\r\n",
+      "|  Expression value is: Hello@239963d8\r\n",
+      "|    assigned to temporary variable $2 of type Hello\r\n",
+      "\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "new Hello();"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* 변수a의 경우, 값만을 저장한다.\n",
+    "* 아래 예에서 객체h는 Hello의 객체를 저장한다. 값만을 저장하는 변수의 경우와 달리 객체는 값뿐만 아니라 함수도 저장하고 있다.\n",
     "* 이 때 dot operator를 사용한다. dot 앞에는 객체, dot 뒤에는 객체의 속성/함수를 사용한다.\n",
     "    ```\n",
     "    h.sayHello();\n",
@@ -519,7 +552,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* 몇 호선 지하철인지는 아직 정해지지 않았다. 출력하면 0이다."
+    "* 몇 호선 지하철인지는 아직 정해지지 않았다. 출력하면 0이다 (default value).\n",
+    "* 각 데이터 타잎별로 default value는 다음과 같다.\n",
+    "\n",
+    "데이터 타잎 | 기본 값 (default value)\n",
+    "----------|----------\n",
+    "byte, short, int, long, float, double | 0 (소수점일 경우 0.0)\n",
+    "char | u0000\n",
+    "String (또는 객체) | null\n",
+    "boolean | false"
    ]
   },
   {
@@ -644,7 +685,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Hello 클래스는 다시 쓰면 다음과 같다. 즉 Hello()가 생략되어 있었다. 이를 default constructor라고 한다."
+    "* Hello 클래스는 다시 쓰면 다음과 같다. 즉 Hello()가 생략되어 있었다. 이를 default constructor라고 한다.\n",
+    "* default constructor의 특징\n",
+    "    * 클래스 명과 동일하다.\n",
+    "    * 반환이 없다. void도 쓰지 않는다.\n",
+    "    * public이라고 선언하지 않으면, 패키지에서만 사용할 수 있는 권한이다 (package private)"
    ]
   },
   {
@@ -927,7 +972,13 @@
     "public | + | 누구나 사용할 수 있다 | Y | Y | Y | Y\n",
     "protected | # | 패밀리, 패키지 | Y | Y | Y | N\n",
     "package private | ~ | 패키지 | Y | Y | N | N\n",
-    "private | - | 나 자신만 | Y | N | N | N\n"
+    "private | - | 나 자신만 | Y | N | N | N\n",
+    "\n",
+    "* private field는 캡슐화를 잘 보여주고 있다 (public field는 캡슐화의 특징을 보여주는 것이 아니다.)\n",
+    "    * 함수를 사용하지 않으면 private field의 값을 볼 수 없다.\n",
+    "    * 함수는 값을 설정하는 경우, 값을 조회하는 경우로 구분할 수 있다.\n",
+    "        * get필드 (예: float getWeight())\n",
+    "        * set필드 (예: void setWeight(float))"
    ]
   },
   {
@@ -3283,21 +3334,14 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
-   "language": "python",
-   "name": "python2"
+   "display_name": "Java 9",
+   "language": "java",
+   "name": "java"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 2
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "file_extension": ".class",
+   "mimetype": "application/java-vm",
+   "name": "java"
   }
  },
  "nbformat": 4,
